# VRC_OCR_Translate

./: .gitignore  CHECK_LOCAL_AI.bat  DESIGN.md  INSTALL.bat  LICENSE  OPEN_LOG.bat  PREPARE_RECORDING.bat  README.md  RECORDING.md  RUN_TRANSLATOR.bat  SETUP_LOCAL_AI.bat  TEST_OVERLAY.bat  THIRD_PARTY_NOTICES.md  config.example.json  pyproject.toml
scripts/: build_demo_video.py  prepare_vr_recording.py  setup_local_ai.ps1
src/vrc_ocr_translate/: __init__.py  app.py  calibration.py  capture.py  change_detection.py  cli.py  config.py  control_panel.py  controls.py  grouping.py  languages.py  local_ocr.py  local_pipeline.py  local_translation.py  models.py  overlay.py  renderer.py  stability.py  text.py
src/vrc_ocr_translate/openvr_actions/: actions.json  bindings_knuckles.json  bindings_oculus_touch.json  bindings_vd_hand_controller.json  bindings_vive_controller.json
tests/: test_calibration.py  test_capture.py  test_change_detection.py  test_config.py  test_controls.py  test_grouping.py  test_languages.py  test_local_ocr.py  test_local_translation.py  test_overlay.py  test_positioned_renderer.py  test_stability.py  test_text.py
