[project]
name = "vrc-ocr-translate"
version = "0.1.0"
description = "Local multilingual OCR translation overlay for VRChat"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = "MIT"
authors = [
    { name = "RezisEwig" },
]
keywords = ["vr", "steamvr", "vrchat", "ocr", "translation", "openvr"]
dependencies = [
    "mss>=10.0.0,<11",
    "numpy>=2.0.0,<3",
    "openvr>=2.12.1401,<3",
    "onnxruntime>=1.22.0,<2",
    "pillow>=11.0.0,<13",
    "rapidocr>=3.8.3,<4",
    "requests>=2.32.0,<3",
    "windows-capture>=2.0.0,<3",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0,<10",
]

[project.scripts]
vrc-ocr-translate = "vrc_ocr_translate.cli:main"

[project.urls]
Homepage = "https://github.com/RezisEwig/VRC_OCR_Translate"
Repository = "https://github.com/RezisEwig/VRC_OCR_Translate.git"
Issues = "https://github.com/RezisEwig/VRC_OCR_Translate/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vrc_ocr_translate"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
